--- a/fontend/src/components/Carts/CartItem/CartItem.module.scss
+++ b/fontend/src/components/Carts/CartItem/CartItem.module.scss
@@ -34,10 +34,18 @@
   
   .cart-item__actions button {
     width: 30px;
+    border-radius: 50%;
     height: 30px;
+    font-size: 16px;
     border: 1px solid #ccc;
+    transition: 0.3s all ease;
     background: white;
     cursor: pointer;
+
+    &:hover {
+      background: #000;
+      color: #ddd;
+    }
   }
   
   .cart-item__price {
@@ -50,5 +58,8 @@
     border: none;
     font-size: 18px;
     cursor: pointer;
+    margin-left: 6px;
+
+    
   }
   
