--- a/fontend/src/components/ListCategory/ListCategory.module.scss
+++ b/fontend/src/components/ListCategory/ListCategory.module.scss
@@ -6,8 +6,9 @@
     max-width: var(--width-content);
     margin: 50px auto;
 }
+
 .category {
-    margin-right: 15px;
+    margin-right: 0px;
     color: black;
 
     .img-category {
@@ -37,16 +38,31 @@
         }
     }
 
-    @media (max-width: 768px){
+    @media (max-width: 768px) {
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+        }
+
         .img-category {
             height: 120px;
         }
+
         .title {
             text-align: center;
             text-transform: uppercase;
             font-size: 13px;
             margin-bottom: 10px;
         }
+
+        .container {
+
+            .category {
+                margin-right: 0px;
+            }
+        }
+
     }
 }
-
