--- a/fontend/src/components/Popper/CountCart/CountCart.module.scss
+++ b/fontend/src/components/Popper/CountCart/CountCart.module.scss
@@ -1,5 +1,6 @@
 .list-cart {
     background-color: #fff;
+    margin-top: 20px;
     border-radius: 8px;
     padding: 16px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
