update load product, product controller

--- a/fontend/src/components/Header/Header.module.scss
+++ b/fontend/src/components/Header/Header.module.scss
@@ -39,6 +39,7 @@
 
     .menu-link {
       text-decoration: none;
+      text-transform: uppercase;
       color: #fff;
       font-size: 14px;
       padding: 31px 16px;
