--- a/fontend/src/components/Popper/Menu/Menu.module.scss
+++ b/fontend/src/components/Popper/Menu/Menu.module.scss
@@ -8,13 +8,14 @@
     .categories {
       display: flex;
       flex: 2;
-      gap: 20px;
+      gap: 30px;
   
       .category {
         flex: 1;
   
         .category-title {
           font-weight: bold;
+          text-transform: uppercase;
           color: var(--black);
           font-size: 16px;
           margin-bottom: 10px;
@@ -28,10 +29,21 @@
   
           .category-item {
             font-size: 14px;
+            display: flex;
+            align-items: center;
             color: #333;
             margin: 9px 3px;
             cursor: pointer;
-  
+
+            .subcategory-title{
+              font-size: 17px;
+            }
+
+            .subcategory-image {
+              width: 70px;
+              height: 100px;
+              margin-right: 10px;
+            }
             &:hover {
               text-decoration: underline;
               color: #0066cc;
