--- a/fontend/src/App.scss
+++ b/fontend/src/App.scss
@@ -1,18 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 :root {
    --black: #000;
    --white: #fff;
    --width-content: 1400px;
 }
 
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", serif;
+ font-family: "Open Sans", serif;
 }
+
 body {
-  font-family: "Pangea", serif;
+ font-family: "Open Sans", serif;
 }
 a[href]{
   text-decoration: none;
