--- a/fontend/src/components/Header/Header.module.scss
+++ b/fontend/src/components/Header/Header.module.scss
@@ -33,6 +33,7 @@
     }
   }
 
+  //scss menu destop
   .menu {
     display: flex;
     align-items: center;
@@ -49,6 +50,71 @@
         background-color: rgba(199, 216, 244, 0.5);
       }
     }
+    .sale {
+      color: orange;
+      font-size: 14px;
+      font-weight: bold;
+    }
+  }
+
+  //scss menu mobile
+  .menu-overlay {
+    position: fixed;
+    top: 76px;
+    left: 0;
+    z-index: 100;
+    width: 100vw;
+    height: calc(100vh - 76px);
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+  
+  .menu-sidebar {
+    position: fixed;
+    top: 76px;
+    left: -100%;
+    width: 300px;
+    height: calc(100vh - 76px);
+    background: #fff;
+    padding: 20px;
+    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+    transition: left 0.3s ease-in-out;
+  
+    .menu-list {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      .menu-link {
+        text-transform: uppercase;
+        align-items: flex-start;
+        background: #f0f0f0;
+        border-radius: 2px;
+        flex-flow: column;
+        height: auto;
+        justify-content: center;
+        margin: 15px 0;
+        padding: 20px 10px;
+        color: #000;
+      }
+    }
+  
+    .menu-item {
+      padding: 10px;
+      font-size: 18px;
+      color: #333;
+      text-decoration: none;
+      &:hover {
+        background: #f4f4f4;
+      }
+    }
 
     .sale {
       color: orange;
@@ -56,6 +122,21 @@
       font-weight: bold;
     }
   }
+  
+  .active .menu-sidebar {
+    left: 0;
+  }
+  
+  .close-menu {
+    background: none;
+    border: none;
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  }
+  
 
   .actions {
     display: flex;
@@ -114,10 +195,12 @@
   }
 
   @media (max-width: 768px) {
-    .menu {
-      display: none;
-    }
-
+      .menu {
+        display: none;
+      }
+      .menu-overlay {
+        display: block;
+      }
     .actions {
       justify-content: space-between;
       gap: 0;
